fixed hero image visibility issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ main {
     height: 400px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("/assets/images/boba-club.jpg");
+    background-image: url("../images/boba-club.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -108,7 +108,7 @@ main {
 }
 
 figure {
-    max-width: 50%;
+    max-width: fit-content
 }
 
 img {
